用户表UI有了

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     </properties>
 
     <dependencies>
-        <!-- spring -->
+        <!-- spring start -->
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
@@ -80,6 +80,17 @@
             <artifactId>spring-tx</artifactId>
             <version>${spring.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+<!--     end spring    -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
