--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,15 +2,36 @@
         "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
         "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
-
 <web-app>
     <display-name>ssm</display-name>
 
-    <!--设置配置文件的路径-->
+    <!-- 配置加载类路径的配置文件 -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>classpath:applicationContext.xml</param-value>
     </context-param>
+
+    <!-- 配置Spring的监听器，默认只加载WEB-INF目录下的applicationContext.xml配置文件-->
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+
+    <!-- 配置 spring mvc 的核心控制器 -->
+    <servlet>
+        <servlet-name>springmvcDispatcherServlet</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <!-- 配置初始化参数，用于读取 springmvc 的配置文件 -->
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>classpath:springmvc.xml</param-value>
+        </init-param>
+        <!-- 配置servlet的对象的创建时间点:应用加载时创建。取值只能是非0正整数，表示启动顺序 -->
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>springmvcDispatcherServlet</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
 
     <!-- 配置 springMVC 编码过滤器 -->
     <filter>
@@ -34,28 +55,7 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    <!--    配置Spring的监听器，默认只加载WEB-INF目录下的applicationContext.xml配置文件-->
-    <listener>
-        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
-
-    <!-- 配置 spring mvc 的核心控制器 -->
-    <servlet>
-        <servlet-name>springmvcDispatcherServlet</servlet-name>
-        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-        <!-- 配置初始化参数，用于读取 springmvc 的配置文件 -->
-        <init-param>
-            <param-name>contextConfigLocation</param-name>
-            <param-value>classpath:springmvc.xml</param-value>
-        </init-param>
-        <!-- 配置servlet的对象的创建时间点:应用加载时创建。取值只能是非0正整数，表示启动顺序 -->
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>springmvcDispatcherServlet</servlet-name>
-        <url-pattern>/</url-pattern>
-    </servlet-mapping>
-
+    <!-- web欢迎页 -->
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
         <welcome-file>index.htm</welcome-file>
