--- a/pom.xml
+++ b/pom.xml
@@ -7,18 +7,18 @@
     <groupId>com.leqiang222</groupId>
     <artifactId>ssm</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>6</source>
-                    <target>6</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+<!--    <build>-->
+<!--        <plugins>-->
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-compiler-plugin</artifactId>-->
+<!--                <configuration>-->
+<!--                    <source>6</source>-->
+<!--                    <target>6</target>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
+<!--        </plugins>-->
+<!--    </build>-->
     <packaging>war</packaging>
 
     <properties>
@@ -178,7 +178,5 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.47</version>
         </dependency>
-    </dependencies>
-
-
+    </dependencies> 
 </project>
